--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -5,8 +5,8 @@ services:
     repo: Oakhampton1111/customsportal
     branch: master
     deploy_on_push: true
-  dockerfile_path: ./backend/Dockerfile
-  source_dir: ./backend
+  dockerfile_path: Dockerfile
+  source_dir: backend
   instance_count: 1
   instance_size_slug: basic-xxs
   envs:
@@ -43,8 +43,8 @@ services:
     repo: Oakhampton1111/customsportal
     branch: master
     deploy_on_push: true
-  dockerfile_path: ./frontend/Dockerfile
-  source_dir: ./frontend
+  dockerfile_path: Dockerfile
+  source_dir: frontend
   instance_count: 1
   instance_size_slug: basic-xxs
   envs:
