--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -35,8 +35,8 @@ RUN adduser --disabled-password --gecos '' appuser \
 USER appuser
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/health || exit 1
+HEALTHCHECK --interval=30s --timeout=30s --start-period=60s --retries=3 \
+    CMD curl -f http://0.0.0.0:8000/health || exit 1
 
 # Expose port and run application
 EXPOSE 8000
